# BridgePattern

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/graphics/: drawing.h  gs1.cpp  gs1.h  gs1_drawing.cpp  gs1_drawing.h  gs2.cpp  gs2.h  gs2_drawing.cpp  gs2_drawing.h  point.cpp  point.h
src/shapes/: circle.cpp  circle.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h
